--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/saltmerch
 spring.datasource.username=jensenyh
 spring.datasource.password=password
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.show.sql=true
+spring.datasource.platform=h2
+spring.h2.console.enabled=true
